fix the bug that it's no wrap between sidebar and md-content when window is md

--- a/_sass/component/base.scss
+++ b/_sass/component/base.scss
@@ -136,3 +136,11 @@ footer  {
   }
 
 }
+
+
+/* for development */
+#main {
+  div {
+    border: 1px solid palegreen;
+  }
+}
